CICO-5313 aligning total text to correct position and giving background color

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -422,6 +422,7 @@ color:#000000;
   
     padding: 1px !important;
     padding-left : 12px !important;
+    background-color: #fcfcfc !important;
    
 }
 .table {
@@ -438,6 +439,8 @@ color:#000000;
 .table > tbody + tfoot{
     border-top:20px solid #fff !important;
 }
+
+
 
 .total {
 color:#9b9b9b;
